# openMVG

./: .gitignore  README.md
docs/: openMVG_development_document.docx
src/: CMakeLists.txt
src/nonFree/sift/: CMakeLists.txt
src/openMVG/geometry/: pose3.hpp
src/openMVG/multiview/: solver_resection.hpp
src/openMVG/sfm/: sfm_data.hpp  sfm_data_BA.hpp  sfm_data_BA_ceres.cpp  sfm_data_filters.cpp  sfm_data_filters.hpp  sfm_data_io.cpp  sfm_data_io.hpp
src/openMVG/sfm/pipelines/sequential/: sequential_SfM.cpp  sequential_SfM.hpp
src/openMVG_IMU/: CMakeLists.txt
src/openMVG_IMU/matching/: CMakeLists.txt  cascade_hasher.hpp  cascade_hasher2.hpp  optical_flow.hpp
src/openMVG_IMU/matching_image_collection/: CMakeLists.txt  ComputeMatchesController.cpp  ComputeMatchesController.hpp  Hierarchical_Matcher_Regions.cpp  Hierarchical_Matcher_Regions.hpp  Optical_Flow_Matcher_Regions.cpp  Optical_Flow_Matcher_Regions.hpp
src/openMVG_IMU/multiview/: CMakeLists.txt  homography_matrix.cpp  homography_matrix.hpp  translation_averaging_solver.hpp  translation_averaging_solver_softl1.cpp
src/openMVG_IMU/sfm/: CMakeLists.txt
src/openMVG_IMU/sfm/pipelines/: CMakeLists.txt  sfm_robust_multimodel_estimation.cpp  sfm_robust_multimodel_estimation.hpp
src/openMVG_IMU/sfm/pipelines/global/: GlobalSfM_priotranslation_averaging.cpp  GlobalSfM_priotranslation_averaging.hpp  GlobalSfM_rotation_averaging.cpp  GlobalSfM_rotation_averaging.hpp  GlobalSfM_translation_averaging.cpp  GlobalSfM_translation_averaging.hpp  myoutput.cpp  myoutput.hpp  sfm_global_engine_ba.cpp  sfm_global_engine_ba.hpp  sfm_global_engine_iterative_pose_augmentation.cpp  sfm_global_engine_iterative_pose_augmentation.hpp  sfm_global_engine_motion_averaging.cpp  sfm_global_engine_motion_averaging.hpp  sfm_global_engine_pose_augmentation.cpp  sfm_global_engine_pose_augmentation.hpp  sfm_global_engine_relative_motions.cpp  sfm_global_engine_relative_motions.hpp
src/openMVG_IMU/sfm/pipelines/sequential/: sequential_SfM.cpp  sequential_SfM.hpp  sequential_SfM_robust_initialization.cpp  sequential_SfM_robust_initialization.hpp
src/openMVG_IMU/utils/: CMakeLists.txt  myoutput.cpp  myoutput.hpp
src/software/: CMakeLists.txt
src/software/IMU/: CMakeLists.txt  main_ComputeMatches_in_opticalflow.cpp  main_ComputeMatches_optical_filtering.cpp  main_ComputeMatches_optical_matching.cpp  main_ComputeMatches_with_opticalfiltering.cpp  main_GlobalSfM.cpp  main_GlobalSfM_ba.cpp  main_GlobalSfM_iterative_pose_augmentation.cpp  main_GlobalSfM_motion_averaging.cpp  main_GlobalSfM_pose_augmentation.cpp  main_IncrementalSfM_robust_initialization.cpp  main_Iterative_IncrementalSfM.cpp  main_Iterative_IncrementalSfM_initial_augmentation.cpp  main_TrajectoryAlign.cpp  main_exportMatches_in_motion.cpp
src/software/SfM/: CMakeLists.txt  main_ComputeMatches.cpp  main_IncrementalSfM.cpp  main_SfMInit_ImageListing.cpp  main_SfMInit_ImageListing_EuRoc.cpp
src/software/SfM/LoopFusion/: CMakeLists.txt  main_AppendIncrementalSfM.cpp
src/software/SfM/SimulationData_Gen/: CMakeLists.txt  main_simu_gen.cpp  main_simu_gen_time.cpp  random_cir.hpp
src/software/SfM/VISfM/: CMakeLists.txt  GetSimuTime.cpp  OnlyScaleEstiamtion.cpp  OnlyScaleEstiamtionFromBin.cpp  VISfM_test.cpp  change_time_xinli.cpp  debug.py  main_VISfM.cpp  main_window_VISfM.cpp  param.txt  result.txt  save_pose_point.cpp  save_tum.cpp  test_imu_factor.cpp
src/software/SfM/VISfM/VISfM_src/: CMakeLists.txt  IMU_InteBase.cpp  IMU_InteBase.hpp  Utility.hpp  VISfM_ceres_facotr.cpp  VISfM_ceres_facotr.h  VISfM_ceres_facotr.hpp  VISfM_ceres_param.cpp  VISfM_ceres_param.h  VISfM_ceres_param.hpp  VI_static_Parm.cpp  VI_static_Parm.hpp  sequential_VISfM.cpp  sequential_VISfM.hpp  visfm_data_BA_ceres.cpp  visfm_data_BA_ceres.hpp
src/software/SfM/Window_SfM/: CMakeLists.txt  main_IncrementalSfM_window.cpp  window_sequential_SfM.cpp  window_sequential_SfM.hpp  xin_time.hpp
src/software/SfM/Window_Visual/: main_IncrementalSfM_window.cpp  xin_time.hpp
src/software/SfM/addIMU/: CMakeLists.txt  imu_functor.hpp  main_IncrementalSfM_IMU.cpp  main_SfMInit_ImageListingFromVideo.cpp  sequential_SfM_IMU.cpp  sequential_SfM_IMU.cpp.bak  sequential_SfM_IMU.hpp  sequential_SfM_IMU.hpp.bak  sfm_data_IMU_BA_ceres.hpp  sfm_data_imu.hpp  sfm_imu.cpp
src/software/SfM/addIMU/imu_integrator/: CMakeLists.txt  sfm_imu.hpp  test.cpp
src/software/SfM/addIMU/imu_integrator/imu_integrator/: imu_integrator.cpp  imu_integrator.h  matrix_utils.h  msckf.h  types.h
src/software/SfM/export/: CMakeLists.txt  main_openMVG2Colmap_ChangeRoot.cpp
src/software/SfM/generator/: CMakeLists.txt  CameraBase.h  CameraPinhole.h  ColorGenerator.h  OBJFileReader.h  PointGenerator.h  PointGeneratorBase.h  PoseGeneratorBase.h  PoseGeneratorCircleSine.h  PoseGeneratorConstAcc.h  PoseGeneratorFunctional.h  PoseGeneratorLine.h  PoseGeneratorSampling.h  SimulationGenerator.cpp  SimulationGenerator.h  SurfaceSampler.h  TrajectoryDifferentiator.h  TrajectorySampler.h  Utils.h  Visualizer.h  main_GenerateSimulationData.cpp  main_GenerateSimulationData2.cpp  types.h
